force-app/main/messaging/objects/Send_Result__c/Send_Result__c.object-meta.xml
<CustomObject>
    <label>Send Result</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Send Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>