force-app/main/messaging/objects/Send_Result__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Send Results</relationshipLabel>
    <relationshipName>Send_Results</relationshipName>
    <type>Lookup</type>
</CustomField>