force-app/main/messaging/objects/Send_Result__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>