force-app/main/messaging/objects/Send_Result__c/fields/Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Log</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Send Results</relationshipLabel>
    <relationshipName>Send_Results</relationshipName>
    <type>Lookup</type>
</CustomField>