force-app/main/messaging/objects/Send_Result__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether the notification has been red by the user. Notifications could be red by clicking the notification content on UI screen.</description>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>