force-app/main/messaging/objects/Send_Result__c/fields/Link_to_Related_Event_or_Object__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Related_Event_or_Object__c</fullName>
    <description>If the notification body contains a link then this will field will be used to capture the URL address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to Related Event or Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>