force-app/main/messaging/objects/Send_Result__c/fields/Msg_Id__c.field-meta.xml
<CustomField>
    <fullName>Msg_Id__c</fullName>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>