force-app/main/messaging/objects/Send_Result__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <referenceTo>Notification__c</referenceTo>
    <relationshipLabel>Send Results</relationshipLabel>
    <relationshipName>Send_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>