force-app/main/messaging/objects/Send_Result__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>Notification Type as set in parent Notification. Required for sending Push Notifications.</description>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>