force-app/main/messaging/objects/Send_Result__c/fields/Push_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Push_Message_Body__c</fullName>
    <description>Contains the notification message in end users language.</description>
    <label>Push Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>