force-app/main/messaging/objects/Send_Result__c/fields/Push_Message_Title__c.field-meta.xml
<CustomField>
    <fullName>Push_Message_Title__c</fullName>
    <description>Contains the notification title in end users language.</description>
    <label>Push Message Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>