force-app/main/messaging/objects/Send_Result__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>