force-app/main/messaging/objects/Send_Result__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>